using body as scroll zone - too frustrating to account scrollbar width when fixing nav parts

--- a/src/sass/views/_home.sass
+++ b/src/sass/views/_home.sass
@@ -1,22 +1,13 @@
 .content.home
   height: 100%
   width: 100%
-  position: absolute
   background: white
-  overflow: hidden 
 
-  .scrollable
-    width: 100%
-    box-sizing: content-box
-    padding-right: 100px
-    margin-right: -100px
-    height: 100%
-    overflow-y: scroll
-
-    .home-section
-      min-height: 100%
-      position: relative
-    
+  .home-section
+    min-height: 100%
+    position: relative
+    z-index: 10
+  
 
   .twitter-feed
     +linear-gradient(left, #f0f0f0, #f5f5f5, #f0f0f0)
@@ -45,7 +36,9 @@
     background: white
     position: relative
     min-height: 300px
-    > .inner
+    z-index: 20
+
+    .intro-inner
       position: absolute
       top: 50%
       width: 100%
@@ -69,9 +62,13 @@
         padding: 0
         float: left
         margin: 0 5px
-
-      &.locked
-        .title
-          .title-text
+    
+    .scroll-lock.locked
+      nav.main
+        position: fixed
+        top: 10px
+        width: 100%
+        left: 0px
+        z-index: 400
 
   .discography
